src/y.output
Grammar

    0 $accept: Program $end

    1 Program: ProgramElementList

    2 ProgramElementList: ProgramElement ProgramElementList
    3                   | ε

    4 ProgramElement: VarDeclStmt
    5               | StructDef
    6               | FnDeclStmt
    7               | FnDef
    8               | SEMICOLON

    9 Type: INT
   10     | ID

   11 StructDef: STRUCT ID LBRACE VarDeclList RBRACE

   12 VarDeclStmt: LET VarDecl SEMICOLON
   13            | LET VarDef SEMICOLON

   14 VarDeclList: VarDecl
   15            | VarDecl COMMA VarDeclList
   16            | ε

   17 VarDecl: ID LBRACKET NUM RBRACKET COLON Type
   18        | ID LBRACKET NUM RBRACKET
   19        | ID COLON Type
   20        | ID

   21 VarDef: ID LBRACKET NUM RBRACKET COLON Type ASSIGN LBRACE RightValList RBRACE
   22       | ID LBRACKET NUM RBRACKET ASSIGN LBRACE RightValList RBRACE
   23       | ID COLON Type ASSIGN RightVal
   24       | ID ASSIGN RightVal

   25 RightValList: RightVal
   26             | RightVal COMMA RightValList
   27             | ε

   28 RightVal: ArithExpr

   29 LeftVal: ID
   30        | LeftVal LBRACKET ID RBRACKET
   31        | LeftVal LBRACKET NUM RBRACKET
   32        | LeftVal DOT ID

   33 FnDeclStmt: FnDecl SEMICOLON

   34 FnDecl: FN ID LPAREN ParamDecl RPAREN ARROW Type
   35       | FN ID LPAREN ParamDecl RPAREN

   36 ParamDecl: VarDeclList

   37 FnDef: FnDecl CodeBlock

   38 CodeBlock: LBRACE CodeBlockStmtList RBRACE

   39 CodeBlockStmtList: ε
   40                  | CodeBlockStmt CodeBlockStmtList

   41 CodeBlockStmt: VarDeclStmt
   42              | AssignStmt
   43              | CallStmt
   44              | IfStmt
   45              | WhileStmt
   46              | ReturnStmt
   47              | CONTINUE SEMICOLON
   48              | BREAK SEMICOLON
   49              | SEMICOLON

   50 AssignStmt: LeftVal ASSIGN RightVal SEMICOLON

   51 CallStmt: FnCall SEMICOLON

   52 FnCall: ID LPAREN RightValList RPAREN

   53 IfStmt: IF BoolUnit CodeBlock
   54       | IF BoolUnit CodeBlock ELSE CodeBlock

   55 WhileStmt: WHILE BoolUnit CodeBlock

   56 ReturnStmt: RET RightVal SEMICOLON
   57           | RET SEMICOLON

   58 ArithExpr: ArithExpr ADD ArithExpr
   59          | ArithExpr SUB ArithExpr
   60          | ArithExpr MUL ArithExpr
   61          | ArithExpr DIV ArithExpr
   62          | ExprUnit

   63 ExprUnit: NUM
   64         | ID
   65         | LPAREN ArithExpr RPAREN
   66         | FnCall
   67         | LeftVal LBRACKET ID RBRACKET
   68         | LeftVal LBRACKET NUM RBRACKET
   69         | LeftVal DOT ID
   70         | SUB ExprUnit

   71 BoolUnit: LPAREN ExprUnit ComOp ExprUnit RPAREN
   72         | LPAREN BoolExpr RPAREN
   73         | LPAREN BoolUOp BoolUnit RPAREN

   74 BoolExpr: BoolExpr AND BoolExpr
   75         | BoolExpr OR BoolExpr
   76         | BoolUnit

   77 BoolUOp: NOT

   78 ComOp: LT
   79      | LE
   80      | GT
   81      | GE
   82      | EQ
   83      | NEQ


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <tokenId> (258) 10 11 17 18 19 20 21 22 23 24 29 30 32 34 35 52 64 67 69
    NUM <tokenNum> (259) 17 18 21 22 31 63 68
    INT <pos> (260) 9
    MUL <pos> (261) 60
    DIV <pos> (262) 61
    ADD <pos> (263) 58
    SUB <pos> (264) 59 70
    NOT <pos> (265) 77
    AND <pos> (266) 74
    OR <pos> (267) 75
    LT <pos> (268) 78
    LE <pos> (269) 79
    GT <pos> (270) 80
    GE <pos> (271) 81
    EQ <pos> (272) 82
    NEQ <pos> (273) 83
    NEG <pos> (274)
    LPAREN <pos> (275) 34 35 52 65 71 72 73
    RPAREN <pos> (276) 34 35 52 65 71 72 73
    LBRACE <pos> (277) 11 21 22 38
    RBRACE <pos> (278) 11 21 22 38
    LBRACKET <pos> (279) 17 18 21 22 30 31 67 68
    RBRACKET <pos> (280) 17 18 21 22 30 31 67 68
    ASSIGN <pos> (281) 21 22 23 24 50
    COMMA <pos> (282) 15 26
    SEMICOLON <pos> (283) 8 12 13 33 47 48 49 50 51 56 57
    COLON <pos> (284) 17 19 21 23
    DOT <pos> (285) 32 69
    FN <pos> (286) 34 35
    ARROW <pos> (287) 34
    LET <pos> (288) 12 13
    STRUCT <pos> (289) 11
    BREAK <pos> (290) 48
    CONTINUE <pos> (291) 47
    WHILE <pos> (292) 55
    IF <pos> (293) 53 54
    ELSE <pos> (294) 54
    RET <pos> (295) 56 57


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Program <program> (42)
        on left: 1
        on right: 0
    ProgramElementList <programElementList> (43)
        on left: 2 3
        on right: 1 2
    ProgramElement <programElement> (44)
        on left: 4 5 6 7 8
        on right: 2
    Type <type> (45)
        on left: 9 10
        on right: 17 19 21 23 34
    StructDef <structDef> (46)
        on left: 11
        on right: 5
    VarDeclStmt <varDeclStmt> (47)
        on left: 12 13
        on right: 4 41
    VarDeclList <varDeclList> (48)
        on left: 14 15 16
        on right: 11 15 36
    VarDecl <varDecl> (49)
        on left: 17 18 19 20
        on right: 12 14 15
    VarDef <varDef> (50)
        on left: 21 22 23 24
        on right: 13
    RightValList <rightValList> (51)
        on left: 25 26 27
        on right: 21 22 26 52
    RightVal <rightVal> (52)
        on left: 28
        on right: 23 24 25 26 50 56
    LeftVal <leftVal> (53)
        on left: 29 30 31 32
        on right: 30 31 32 50 67 68 69
    FnDeclStmt <fnDeclStmt> (54)
        on left: 33
        on right: 6
    FnDecl <fnDecl> (55)
        on left: 34 35
        on right: 33 37
    ParamDecl <paramDecl> (56)
        on left: 36
        on right: 34 35
    FnDef <fnDef> (57)
        on left: 37
        on right: 7
    CodeBlock <codeBlockStmtList> (58)
        on left: 38
        on right: 37 53 54 55
    CodeBlockStmtList <codeBlockStmtList> (59)
        on left: 39 40
        on right: 38 40
    CodeBlockStmt <codeBlockStmt> (60)
        on left: 41 42 43 44 45 46 47 48 49
        on right: 40
    AssignStmt <assignStmt> (61)
        on left: 50
        on right: 42
    CallStmt <callStmt> (62)
        on left: 51
        on right: 43
    FnCall <fnCall> (63)
        on left: 52
        on right: 51 66
    IfStmt <ifStmt> (64)
        on left: 53 54
        on right: 44
    WhileStmt <whileStmt> (65)
        on left: 55
        on right: 45
    ReturnStmt <returnStmt> (66)
        on left: 56 57
        on right: 46
    ArithExpr <arithExpr> (67)
        on left: 58 59 60 61 62
        on right: 28 58 59 60 61 65
    ExprUnit <exprUnit> (68)
        on left: 63 64 65 66 67 68 69 70
        on right: 62 70 71
    BoolUnit <boolUnit> (69)
        on left: 71 72 73
        on right: 53 54 55 73 76
    BoolExpr <boolExpr> (70)
        on left: 74 75 76
        on right: 72 74 75
    BoolUOp <boolUOp> (71)
        on left: 77
        on right: 73
    ComOp <comOp> (72)
        on left: 78 79 80 81 82 83
        on right: 71


State 0

    0 $accept: • Program $end

    SEMICOLON  shift, and go to state 1
    FN         shift, and go to state 2
    LET        shift, and go to state 3
    STRUCT     shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    Program             go to state 5
    ProgramElementList  go to state 6
    ProgramElement      go to state 7
    StructDef           go to state 8
    VarDeclStmt         go to state 9
    FnDeclStmt          go to state 10
    FnDecl              go to state 11
    FnDef               go to state 12


State 1

    8 ProgramElement: SEMICOLON •

    $default  reduce using rule 8 (ProgramElement)


State 2

   34 FnDecl: FN • ID LPAREN ParamDecl RPAREN ARROW Type
   35       | FN • ID LPAREN ParamDecl RPAREN

    ID  shift, and go to state 13


State 3

   12 VarDeclStmt: LET • VarDecl SEMICOLON
   13            | LET • VarDef SEMICOLON

    ID  shift, and go to state 14

    VarDecl  go to state 15
    VarDef   go to state 16


State 4

   11 StructDef: STRUCT • ID LBRACE VarDeclList RBRACE

    ID  shift, and go to state 17


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 18


State 6

    1 Program: ProgramElementList •

    $default  reduce using rule 1 (Program)


State 7

    2 ProgramElementList: ProgramElement • ProgramElementList

    SEMICOLON  shift, and go to state 1
    FN         shift, and go to state 2
    LET        shift, and go to state 3
    STRUCT     shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    ProgramElementList  go to state 19
    ProgramElement      go to state 7
    StructDef           go to state 8
    VarDeclStmt         go to state 9
    FnDeclStmt          go to state 10
    FnDecl              go to state 11
    FnDef               go to state 12


State 8

    5 ProgramElement: StructDef •

    $default  reduce using rule 5 (ProgramElement)


State 9

    4 ProgramElement: VarDeclStmt •

    $default  reduce using rule 4 (ProgramElement)


State 10

    6 ProgramElement: FnDeclStmt •

    $default  reduce using rule 6 (ProgramElement)


State 11

   33 FnDeclStmt: FnDecl • SEMICOLON
   37 FnDef: FnDecl • CodeBlock

    LBRACE     shift, and go to state 20
    SEMICOLON  shift, and go to state 21

    CodeBlock  go to state 22


State 12

    7 ProgramElement: FnDef •

    $default  reduce using rule 7 (ProgramElement)


State 13

   34 FnDecl: FN ID • LPAREN ParamDecl RPAREN ARROW Type
   35       | FN ID • LPAREN ParamDecl RPAREN

    LPAREN  shift, and go to state 23


State 14

   17 VarDecl: ID • LBRACKET NUM RBRACKET COLON Type
   18        | ID • LBRACKET NUM RBRACKET
   19        | ID • COLON Type
   20        | ID •
   21 VarDef: ID • LBRACKET NUM RBRACKET COLON Type ASSIGN LBRACE RightValList RBRACE
   22       | ID • LBRACKET NUM RBRACKET ASSIGN LBRACE RightValList RBRACE
   23       | ID • COLON Type ASSIGN RightVal
   24       | ID • ASSIGN RightVal

    LBRACKET  shift, and go to state 24
    ASSIGN    shift, and go to state 25
    COLON     shift, and go to state 26

    $default  reduce using rule 20 (VarDecl)


State 15

   12 VarDeclStmt: LET VarDecl • SEMICOLON

    SEMICOLON  shift, and go to state 27


State 16

   13 VarDeclStmt: LET VarDef • SEMICOLON

    SEMICOLON  shift, and go to state 28


State 17

   11 StructDef: STRUCT ID • LBRACE VarDeclList RBRACE

    LBRACE  shift, and go to state 29


State 18

    0 $accept: Program $end •

    $default  accept


State 19

    2 ProgramElementList: ProgramElement ProgramElementList •

    $default  reduce using rule 2 (ProgramElementList)


State 20

   38 CodeBlock: LBRACE • CodeBlockStmtList RBRACE

    ID         shift, and go to state 30
    SEMICOLON  shift, and go to state 31
    LET        shift, and go to state 3
    BREAK      shift, and go to state 32
    CONTINUE   shift, and go to state 33
    WHILE      shift, and go to state 34
    IF         shift, and go to state 35
    RET        shift, and go to state 36

    $default  reduce using rule 39 (CodeBlockStmtList)

    VarDeclStmt        go to state 37
    LeftVal            go to state 38
    CodeBlockStmtList  go to state 39
    CodeBlockStmt      go to state 40
    AssignStmt         go to state 41
    CallStmt           go to state 42
    FnCall             go to state 43
    IfStmt             go to state 44
    WhileStmt          go to state 45
    ReturnStmt         go to state 46


State 21

   33 FnDeclStmt: FnDecl SEMICOLON •

    $default  reduce using rule 33 (FnDeclStmt)


State 22

   37 FnDef: FnDecl CodeBlock •

    $default  reduce using rule 37 (FnDef)


State 23

   34 FnDecl: FN ID LPAREN • ParamDecl RPAREN ARROW Type
   35       | FN ID LPAREN • ParamDecl RPAREN

    ID  shift, and go to state 47

    $default  reduce using rule 16 (VarDeclList)

    VarDeclList  go to state 48
    VarDecl      go to state 49
    ParamDecl    go to state 50


State 24

   17 VarDecl: ID LBRACKET • NUM RBRACKET COLON Type
   18        | ID LBRACKET • NUM RBRACKET
   21 VarDef: ID LBRACKET • NUM RBRACKET COLON Type ASSIGN LBRACE RightValList RBRACE
   22       | ID LBRACKET • NUM RBRACKET ASSIGN LBRACE RightValList RBRACE

    NUM  shift, and go to state 51


State 25

   24 VarDef: ID ASSIGN • RightVal

    ID      shift, and go to state 52
    NUM     shift, and go to state 53
    SUB     shift, and go to state 54
    LPAREN  shift, and go to state 55

    RightVal   go to state 56
    LeftVal    go to state 57
    FnCall     go to state 58
    ArithExpr  go to state 59
    ExprUnit   go to state 60


State 26

   19 VarDecl: ID COLON • Type
   23 VarDef: ID COLON • Type ASSIGN RightVal

    ID   shift, and go to state 61
    INT  shift, and go to state 62

    Type  go to state 63


State 27

   12 VarDeclStmt: LET VarDecl SEMICOLON •

    $default  reduce using rule 12 (VarDeclStmt)


State 28

   13 VarDeclStmt: LET VarDef SEMICOLON •

    $default  reduce using rule 13 (VarDeclStmt)


State 29

   11 StructDef: STRUCT ID LBRACE • VarDeclList RBRACE

    ID  shift, and go to state 47

    $default  reduce using rule 16 (VarDeclList)

    VarDeclList  go to state 64
    VarDecl      go to state 49


State 30
